# DAFN_Project

./: CMakeLists.txt  README.md  package.xml
include/simulink_wrapper/: modelnode.hpp  publisher.hpp  structured_data.hpp  subscriber.hpp
simulink_wrapper/: CMakeLists.txt  README.md  package.xml
simulink_wrapper/config/: node_parameters.yaml
simulink_wrapper/include/simulink_wrapper/: modelnode.hpp  publisher.hpp  rtw_capi.h
simulink_wrapper/launch/: import os.py
simulink_wrapper/src/: modelnode.cpp  publisher.cpp  subscriber.cpp
simulink_wrapper_cpp_new/: CMakeLists.txt  package.xml
simulink_wrapper_cpp_new/include/simulink_wrapper_cpp_new/: modelnode.hpp  rtwtypes.h
simulink_wrapper_cpp_new/src/: modelnode.cpp  publisher.cpp  subscriber.cpp
simulink_wrapper_old/: CMakeLists.txt
simulink_wrapper_old/include/simulink_wrapper/: libdigitalfilter.h  libdigitalfilter_capi.h  libdigitalfilter_types.h  rt_defines.h  simulink_classes.hpp
simulink_wrapper_old/src/: simulink_classes.cpp
src/: modelnode.cpp  publisher.cpp  subscriber.cpp
